<resources>
    <string name="app_name">Fitness App</string>

    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="db_personal_details">personal_details</string>
    <string name="field_email">email</string>
    <string name="field_username">username</string>
    <string name="auth_failed">Incorrect Password</string>
    <string name="dbname_photos">photos</string>
    <string name="dbname_user_photos">user_photos</string>
    <string name="field_photo_id">photo_id</string>
    <string name="field_image_path">image_path</string>

    //Trainee Home Strings
    <string name="classes">Classes</string>
    <string name="mydiet">My Diet</string>
    <string name="progress">Progress</string>
    <string name="workouts">Workouts</string>

    //Sign In/Up Strings
    <string name="ContactUs">Contact Us</string>
    <string name="GoSignIn">Already Have an Account?\n Sign In</string>
    <string name="createAccount">Create An Account</string>


    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="title_activity_progress_gallery">ProgressGalleryActivity</string>
    <string name="title_activity_test">Test</string>
    <string name="trainer">Trainer</string>


    <string name="delete_friend_request">Delete Friend Request</string>
    <string name="send_friend_request">Send Friend Request</string>

    <string name="next">Next</string>

    <string name="let_us_know_you_better">Let Us Know You Better</string>
    <string name="personal_details">Personal Details</string>
    <string name="profile">Profile</string>
    <string name="edit">edit</string>

    <string name="personal_trainer">Personal Trainer</string>
    <string name="date">Date</string>

    <string name="change_weight">Change Weight</string>
    <string name="change_height">Change Height</string>
    <string name="change_gender">Change Gender</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>

    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <string name="submit">Submit</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm">CONFIRM</string>


    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_again">New Password Again</string>

    <string name="progress_gallery">Progress Gallery</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_activity_jogging_tracking">Map</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="field_user_id">user_id</string>

    <string name="notification_text">Tracking, tap to cancel</string>
    <string name="transport_id" translatable="false">123</string>
    <string name="firebase_path" translatable="false">locations</string>
    <string name="firebase_email" translatable="false">mahmoud.al808@gmail.com</string>
    <string name="firebase_password" translatable="false">mahmoud808</string>
    <string name="last_seen">Last Seen</string>
    <string name="send_message">Send Message</string>
    <string name="or">OR</string>
    <string name="delete_request">Delete Request</string>
    <string name="client_profile">Client Profile</string>
    <string name="speciality">Speciality</string>
    <string name="availability">Availability</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="clients">Clients</string>
    <string name="requests">Requests</string>
    <string name="food_search">Food Search</string>
    <string name="search_for_a_food">Search for a food</string>
    <string name="email_cap">Email</string>
    <string name="stretching">Stretching</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="timetable">Timetable</string>
    <string name="jogging">Jogging</string>
    <string name="stretches">Stretches</string>
    <string name="insert">Insert</string>
    <string name="education">Education</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="date_started">Date Started</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="firebase_search">Firebase Search</string>
    <string name="search_here">Search here</string>
    <string name="delete_trainer">Delete Trainer</string>

    //Arrays
    <string-array name="country_names">
        <item>Bhutan</item>
        <item>Colombia</item>
    </string-array>

    <array name="country_icons">
        <item>@drawable/calf</item>
        <item>@drawable/calfsol</item>
    </array>

    <string-array name="weightVariables">
        <item>kg</item>
        <item>lb</item>
    </string-array>

    <string-array name="heightVariables">
        <item>cm</item>
        <item>ft</item>
    </string-array>

    <string-array name="foodCategories">
        <item>Fruit_Veg</item>
        <item>SeaFood</item>
        <item>Meat</item>
    </string-array>

    <string-array name="meals">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>

</resources>
