<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/outline"
    tools:context=".Profile.ChangePasswordActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/outline"
      android:orientation="horizontal">

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:srcCompat="@drawable/ic_back_white"
        android:layout_gravity="center_vertical" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="serif-monospace"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sp" />

  </LinearLayout>

  <LinearLayout
      android:id="@+id/relLayout6"
      android:layout_below="@id/relLayout5"
      android:layout_marginTop="20dp"
      android:layout_gravity="center_vertical|center_horizontal"
      android:layout_width="@dimen/CardViewWidth"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <EditText
        android:id="@+id/currentPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/SignInEditTextHeight"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal|center_vertical"
        android:background="@drawable/edit_text_bg"
        android:fontFamily="serif-monospace"
        android:hint="@string/current_password"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_20sp">
    </EditText>

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/SignInEditTextHeight"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_bg"
        android:gravity="center_horizontal|center_vertical"
        android:fontFamily="serif-monospace"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_20sp"/>

    <EditText
        android:id="@+id/repeatPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/SignInEditTextHeight"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_bg"
        android:fontFamily="serif-monospace"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/new_password_again"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_20sp" />

    <Button
        android:id="@+id/changePassBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:text="@string/submit"
        android:textSize="@dimen/_20sp"
        android:textColor="@color/white"/>

  </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>