<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <LinearLayout
        android:id="@+id/login_linlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/SignInBGImagHeight"
            android:layout_gravity="center"
            android:background="@drawable/top_card_bg">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/LogoWidth"
                    android:layout_height="@dimen/LogoHeight"
                    android:src="@drawable/logo_with_text_white" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="@dimen/SignInEditTextWidth"
                    android:layout_height="@dimen/SignInEditTextHeight"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_bg"
                    android:gravity="center"
                    android:hint="@string/email_cap"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="@dimen/SignInEditTextWidth"
                    android:layout_height="@dimen/SignInEditTextHeight"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_text_bg"
                    android:gravity="center"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/loginBTN"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@null"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20sp" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/CreateAccountText"
                    android:layout_width="240dp"
                    android:layout_height="55dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/createAccount"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sp" />

                <View
                    android:layout_width="@dimen/DividerWidth"
                    android:layout_height="1dp"
                    android:background="@color/black" />

                <Button
                    android:layout_width="240dp"
                    android:layout_height="55dp"
                    android:background="@color/white"
                    android:text="@string/ContactUs"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sp" />


            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>