<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/confirm_password"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/confirm_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/SignInEditTextHeight"
        android:layout_below="@id/dialogTitle"
        android:background="@null"
        android:fontFamily="serif-monospace"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/identifier_grey"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/confirm_email"
        android:layout_gravity="center_horizontal"
        android:background="@color/black" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/SignInEditTextHeight"
        android:layout_below="@id/confirm_email"
        android:background="@null"
        android:fontFamily="serif-monospace"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/identifier_grey"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/confirm_password"
        android:layout_gravity="center_horizontal"
        android:background="@color/black" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_password">

        <TextView
            android:id="@+id/dialogCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="serif-monospace"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/_17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialogConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="serif-monospace"
            android:text="@string/confirm"
            android:textColor="@color/black"
            android:textSize="@dimen/_17sp"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>